--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
       <hr />
       <p class="source">
         Coded by Jane Madima. Open-source code in
-        <a href="https://github.com/Janelle-Madima/Weather-App">GitHub</a>
+        <a href="https://github.com/Janelle-Madima/Weather-app-project"
+          >GitHub</a
+        >
       </p>
     </div>
 
